Fix Interaction wrapping

--- a/src/components/Interaction/Interaction.module.scss
+++ b/src/components/Interaction/Interaction.module.scss
@@ -8,51 +8,31 @@
   all: inherit;
   position: relative;
   cursor: pointer;
-  display: inline-block;
+  display: inline;
   margin-inline: -6px;
   padding-inline: 6px 4px;
   box-decoration-break: clone;
 
+  border-radius: size.$border-radius-small;
+  transition-property: color, background-color;
+  transition-duration: 200ms;
+  transition-timing-function: ease;
   & {
-    color: color.$accent-primary;
-    @include util.hover {
-      color: color.$accent-container;
-      &::before {
-        background-color: color.$accent-container-contrast;
-      }
-    }
+    --color: #{color.$accent-primary};
+    --hover-color: #{color.$accent-container};
+    --hover-bg-color: #{color.$accent-container-contrast};
   }
   .accent & {
-    color: color.$accent-container;
-    @include util.hover {
-      color: color.$accent-container;
-      &::before {
-        background-color: color.$accent-container-contrast;
-      }
-    }
+    --color: #{color.$accent-container};
+    --hover-color: #{color.$accent-container};
+    --hover-bg-color: #{color.$accent-container-contrast};
   }
 
-  &,
-  &::before {
-    border-radius: size.$border-radius-small;
-    transition-property: color, background-color;
-    transition-duration: 200ms;
-    transition-timing-function: ease;
-  }
-
-  &::before {
-    content: "";
-    position: absolute;
-    inset: 0.1em 0;
-    z-index: -1;
-  }
-
+  color: var(--color);
   @include util.hover {
+    color: var(--hover-color);
     outline: none;
-    &,
-    &::before {
-      transition-duration: 400ms;
-    }
+    background-color: var(--hover-bg-color);
   }
 
   @include util.mw-md {
@@ -67,4 +47,8 @@
   height: 0.6em;
   vertical-align: middle;
   margin-left: 0.1em;
+}
+
+.suffix {
+  color: unset;
 }
