--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -14,8 +14,7 @@
   h4,
   h5,
   h6,
-  p,
-  span {
+  p {
     font-weight: 300;
     line-height: 1.3;
     font-size: size.$font-large;
